ajuste de dependencias

--- a/build.properties
+++ b/build.properties
@@ -3,9 +3,9 @@ project.name=vraptor-blank-project-gae
 output.dir=target
 test.build.dir=target/test-classes
 
-webapp.dir=war
-lib.dir=war/WEB-INF/lib
-build.dir=war/WEB-INF/classes
+webapp.dir=src/main/webapp
+lib.dir=src/main/webapp/WEB-INF/lib
+build.dir=src/main/webapp/WEB-INF/classes
 
 src.dir=src/main/java
 resources.dir=src/main/resources
