--- a/.settings/com.google.gdt.eclipse.core.prefs
+++ b/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Sat Feb 12 00:40:08 BRST 2011
+#Sat Feb 12 09:43:37 BRST 2011
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
 warSrcDir=src/main/webapp
-warSrcDirIsOutput=true
+warSrcDirIsOutput=false
