--- a/ivy.xml
+++ b/ivy.xml
@@ -10,10 +10,17 @@
 
 	<dependencies>
 		<dependency org="br.com.caelum" name="vraptor" rev="3.3.0" conf="default" />
-		
 		<dependency org="opensymphony" name="sitemesh" rev="2.4.2" conf="default" />
 		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="default" />
 		<dependency org="joda-time" name="joda-time" rev="1.6.2" conf="default" />
+		<dependency org="net.sf.scannotation" name="scannotation" rev="1.0.2" conf="default" transitive="false" />
+		<dependency org="commons-collections" name="commons-collections" rev="3.2.1" conf="default" />
+		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.2.1" conf="default" />
+		<dependency org="commons-io" name="commons-io" rev="1.3.2" conf="default" />
+		<dependency org="opensymphony" name="sitemesh" rev="2.4.2" conf="default" />
+		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="default" />
+		<dependency org="joda-time" name="joda-time" rev="1.6.2" conf="default" />
+		<dependency org="com.thoughtworks.xstream" name="xstream" rev="1.3.1" conf="default" />
 
 		<!-- Provided dependencies -->
 		<dependency org="javax.servlet" name="servlet-api" rev="2.5" conf="provided->default" />
@@ -24,15 +31,9 @@
 		<dependency org="org.hamcrest" name="hamcrest-all" rev="1.1" conf="test->default" />
 		<dependency org="org.mockito" name="mockito-all" rev="1.8.5" conf="test->default" />
 		
-		<dependency org="net.sf.scannotation" name="scannotation" rev="1.0.2" conf="default" transitive="false" />
-
-		<dependency org="commons-collections" name="commons-collections" rev="3.2.1" conf="default" />
-		<dependency org="commons-fileupload" name="commons-fileupload" rev="1.2.1" conf="default" />
-		<dependency org="commons-io" name="commons-io" rev="1.3.2" conf="default" />
-		<dependency org="opensymphony" name="sitemesh" rev="2.4.2" conf="default" />
-		<dependency org="javax.servlet" name="jstl" rev="1.2" conf="default" />
-		<dependency org="joda-time" name="joda-time" rev="1.6.2" conf="default" />
-		<dependency org="com.thoughtworks.xstream" name="xstream" rev="1.3.1" conf="default" />
+		<!-- App Engine test dependencies -->
+		<dependency org="com.google.appengine" name="appengine-api-stubs" rev="1.4.0" conf="test->default"/>
+		<dependency org="com.google.appengine" name="appengine-testing" rev="1.4.0" conf="test->default"/>
 		
 		<!-- Objectify Persistence Framework for App Engine -->		
 		<dependency org="com.googlecode.objectify" name="objectify" rev="2.2.3" conf="default" />
@@ -48,10 +49,5 @@
 		<dependency org="org.apache.geronimo.specs" name="geronimo-jta_1.1_spec" rev="1.1.1" conf="default" />
 		<dependency org="javax.jdo" name="jdo2-api" rev="2.3-eb" conf="default" />
 		<dependency org="net.sf.jsr107cache" name="jsr107cache" rev="1.1" conf="default" />
-
-		<!-- Overriding ognl from vraptor to exclude old version javassist -->
-		<dependency org="ognl" name="ognl" rev="2.7.3" conf="default" transitive="false" />
-
-		
 	</dependencies>
 </ivy-module>
